--- a/src/index.html
+++ b/src/index.html
@@ -2,20 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DocsApp</title>
+  <title>Navins Docs</title>
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="assets/css/theme.css" type="text/css" />
-  <link rel="stylesheet" href="assets/css/theme_extra.css" type="text/css" />
-  <link rel="stylesheet" href="assets/css/highlight.css">
-  <link rel="stylesheet" href="assets/css/font-awesome.min.css" type="text/css"/>
-
-  <script src="assets/js/jquery-2.2.0.min.js"></script>
-  <script src="assets/js/modernizr-2.8.3.min.js"></script>
-  <script type="text/javascript" src="assets/js/highlight.pack.js"></script>
-  <script src="assets/js/theme.js"></script> 
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
